# lorenz-attractor

./: Cargo.toml  LICENCE  README.md
src/: attractor.rs  main.rs  utils.rs
